# BioCPU

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
biocpu/: __init__.py  context.py  parameter.py
biocpu/nn/: __init__.py
biocpu/nn/functional/: __init__.py  _functions.py
biocpu/nn/modules/: __init__.py  linear.py  module.py  sequential.py
biocpu/notes/de/: Entrollbare lineare Relaxation mit lokalem Lernen.md
biocpu/notes/en/: Unrollable Linear Relaxation with Local Learning.md
biocpu/notes/ua/: Розгортна лінійна релаксація з локальним навчанням.md
biocpu/optim/: __init__.py  local.py
biocpu/utils/data/: __init__.py
tests/: test_logic.py  test_mnist.py  test_smoke.py
